[package]
name = "phantom"
version = "0.1.0"
edition = "2018"

[dependencies]
bytes = "1"
pnet = "0.28.0"
tokio-tun = "0.3.15"
tokio = { version = "1.11.0", features = ["full"] }
lru_time_cache = "0.11.11"
rand = { version = "0.8.4", features = ["small_rng"] }
clap = "2.33.3"
log = "0.4"
pretty_env_logger = "0.4.0"
socket2 = { version = "0.4.2", features = ["all"] }
