[package]
name = "fake-tcp"
version = "0.7.0"
edition = "2024"
authors = ["Datong Sun <dndx@idndx.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dndx/phantun"
readme = "README.md"
description = """
A TUN interface based, user space, asynchronous and high performance TCP stack that allows
packet oriented tunneling with minimum overhead.
"""

[features]
benchmark = []

[dependencies]
bytes = "1"
pnet = "0"
rand = { version = "0", features = ["small_rng"] }
internet-checksum = "0"
tokio-tun = "0"
flume = "0"
tokio = { workspace = true }
log = { workspace = true }
