[package]
name = "phantun"
version = "0.6.0"
edition = "2021"
authors = ["Datong Sun <dndx@idndx.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dndx/phantun"
readme = "README.md"
description = """
Transforms UDP stream into (fake) TCP streams that can go through
Layer 3 & Layer 4 (NAPT) firewalls/NATs.
"""
[dependencies]
clap = { version = "4.2.5", features = ["cargo"] }
socket2 = { version = "0.5.2", features = ["all"] }
fake-tcp = { path = "../fake-tcp", version = "0.5" }
tokio = { version = "1.28.0", features = ["full"] }
tokio-util = "0.7.8"
log = "0.4.17"
env_logger = "0.10.0"
chrono = "0.4.24"
tokio-tun = "0.7"
num_cpus = "1.15.0"
neli = "0.6.4"
nix = "0.26.2"
